# chatbot-4.0-Claude

./: .env  .gitignore  Existing Booking.xlsx  README.md  Sample_Bookings.xlsx  config.py  data_service.py  debug_langchain.py  debug_langchain.txt  faq.json  knowledge_base.txt  llm_service.py  main.py  pyproject.toml  requirements.txt  test_agent.py  vector_service.py  verify_logging_debug.py
chroma_db/: chroma.sqlite3
static/: index.html  style.css
